@@ -31,6 +31,7 @@ import rbasamoyai.createbigcannons.cannon_control.contraption.AbstractMountedCan
 import rbasamoyai.createbigcannons.cannon_control.contraption.MountedBigCannonContraption;
 import rbasamoyai.createbigcannons.cannon_control.contraption.PitchOrientedContraptionEntity;
 import rbasamoyai.createbigcannons.cannons.CannonContraptionProviderBlock;
+import rbasamoyai.createbigcannons.cannons.InteractableCannonBlock;
 import rbasamoyai.createbigcannons.cannons.big_cannons.cannon_end.BigCannonEnd;
 import rbasamoyai.createbigcannons.cannons.big_cannons.material.BigCannonMaterial;
 import rbasamoyai.createbigcannons.config.CBCConfigs;
@@ -42,7 +43,7 @@ import rbasamoyai.createbigcannons.multiloader.NetworkPlatform;
 import rbasamoyai.createbigcannons.munitions.big_cannon.BigCannonMunitionBlock;
 import rbasamoyai.createbigcannons.network.ClientboundUpdateContraptionPacket;
 
-public interface BigCannonBlock extends WeldableBlock, CannonContraptionProviderBlock {
+public interface BigCannonBlock extends WeldableBlock, CannonContraptionProviderBlock, InteractableCannonBlock {
 
 	BigCannonMaterial getCannonMaterial();
 
@@ -214,10 +215,14 @@ public interface BigCannonBlock extends WeldableBlock, CannonContraptionProvider
 		}
 	}
 
-	default <T extends BlockEntity & IBigCannonBlockEntity> boolean onInteractWhileAssembled(Player player, BlockPos localPos,
-			Direction side, InteractionHand interactionHand, Level level, MountedBigCannonContraption cannon, T be,
-			StructureBlockInfo info, PitchOrientedContraptionEntity entity) {
-		if (((BigCannonBlock) info.state.getBlock()).getFacing(info.state).getAxis() != side.getAxis() || be.cannonBehavior().isConnectedTo(side))
+	@Override
+	default boolean onInteractWhileAssembled(Player player, BlockPos localPos, Direction side, InteractionHand interactionHand,
+											 Level level, Contraption contraption, BlockEntity be,
+											 StructureBlockInfo info, PitchOrientedContraptionEntity entity) {
+		if (!(be instanceof IBigCannonBlockEntity cbe)
+			|| !(contraption instanceof MountedBigCannonContraption cannon)
+			|| ((BigCannonBlock) info.state.getBlock()).getFacing(info.state).getAxis() != side.getAxis()
+			|| cbe.cannonBehavior().isConnectedTo(side))
 			return false;
 		ItemStack stack = player.getItemInHand(interactionHand);
 		if (Block.byItem(stack.getItem()) instanceof BigCannonMunitionBlock munition) {
@@ -227,8 +232,8 @@ public interface BigCannonBlock extends WeldableBlock, CannonContraptionProvider
 				if (!player.getCooldowns().isOnCooldown(stack.getItem()) && cannon.tryDroppingMortarRound(stack)) {
 					player.getCooldowns().addCooldown(stack.getItem(), CBCConfigs.SERVER.cannons.dropMortarItemCooldown.get());
 					flag = true;
-				} else if (be.cannonBehavior().tryLoadingBlock(loadInfo)) {
-					writeAndSyncSingleBlockData(be, info, entity, cannon);
+				} else if (cbe.cannonBehavior().tryLoadingBlock(loadInfo)) {
+					writeAndSyncSingleBlockData(be, info, entity, contraption);
 					flag = true;
 				}
 				if (flag) {
